LAB-K8S-09/allow-backend.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend
spec:
  podSelector:
   matchLabels:
     role: backend
  policyTypes:
  - Ingress
