LAB-K8S-09/allow-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
