LAB-K8S-09/example-1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-1
spec:
  podSelector:
   matchLabels:
     role: backend
  policyTypes:
  - Ingress
