LAB-K8S-09/example-2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
