LAB-K8S-09/example-3.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-3
spec:
  podSelector: {}
  policyTypes:
  - Ingress
