LAB-K8S-09/network-policies-example-2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policies-2
  namespace: my-namespace
spec:
  ingress:
  - podSelector:
    matchLabels:
      app: postgres
  from:
  - namespaceSelector:
      matchLabels:
        namespace: chaos
    podSelector:
      matchLabels:
        app: operate
  policyTypes:
  - Ingress
